ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro service  api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mokchhedulislam.page.gd
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
